# QuickLauncher

./: .env  .prettierrc  LICENSE  README.md  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Date.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/clipboard/: listener.rs
src-tauri/src/commands/: add_category.rs  add_launch.rs  add_launch_history.rs  add_or_update_autocomplete.rs  backup_database.rs  delete_category.rs  delete_launch.rs  delete_launch_by_category.rs  ensure_default_category.rs  exe_command.rs  get_alias_launch.rs  get_app_config.rs  get_autocomplete.rs  get_category.rs  get_category_by_id.rs  get_category_tree.rs  get_file_info.rs  get_launch.rs  get_launch_by_id.rs  get_launch_by_name_and_category.rs  get_local_icon_base64.rs  get_online_img_base64.rs  get_recent_launch_history.rs  get_website_info.rs  import_database.rs  mod.rs  open_app_data_dir.rs  open_file_with_lnk.rs  open_path.rs  rename_launch.rs  reset_data.rs  restart_app.rs  reveal_in_file_manager.rs  run_launch.rs  run_launch_as_admin.rs  save_app_config.rs  search_launch.rs  set_app_config.rs  set_default_tray_icon.rs  update_category.rs  (+2 more)
src-tauri/src/commands/search/: exe_command.rs  mod.rs  open_directory.rs  open_file.rs  open_url.rs
src-tauri/src/common/: utils.rs
src-tauri/src/db/: connection.rs
src-tauri/src/entity/: autocomplete_history.rs  categories.rs  configs.rs  launch_history.rs  launch_items.rs  mod.rs  prelude.rs
src-tauri/src/models/: app_config_state.rs  autocomplete_item.rs  category.rs  category_item.rs  config_item.rs  file_info.rs  launch_item.rs  launch_item.rs.backup  mod.rs
src/api/: index.ts
src/app/: setupApp.ts  setupGlobalEvents.ts
src/common/: formatLaunchType.ts
src/components/: BrowserPicker.vue  CategoryContextMenu.vue  CategoryItemContextMenu.vue  DescText.vue  Footer.vue  Header.vue  IconPicker.vue  Kbd.vue  LaunchItem.vue  LaunchList.vue  ListContextMenu.vue  ListItem.vue  ListItemContextMenu.vue  OpenDemoVideo.vue  OperationCategoryModal.vue  OperationLaunchModal.vue
src/components/ui/: Icon.vue  SettingGroup.vue  SettingItem.vue  SettingSwitchItem.vue
src/composables/: index.ts  useAppConfig.ts  useAppConfigActions.ts  useCategoryCorrelationDir.ts  useCategorySort.ts  useContextMenuClose.ts  useCreateTray.ts  useFormState.ts  useGlobalHotkeys.ts  useLaunchAction.ts  useLaunchActive.ts  useLoadConfig.ts  useLoading.ts  useMainWindowShortcut.ts  useNaiveUiApi.ts  useToggleWindowVisible.ts  useUpdateAppConfig.ts  useWindowGuards.ts
src/constant/: data.ts  index.ts
src/directives/: index.ts  transparent.ts
src/router/: index.ts
src/store/: index.ts  useAppConfigStore.ts  useStore.ts
src/styles/: global.css
src/types/: index.d.ts
src/utils/: concurRequest.ts  date.ts  delay.ts  eventBus.ts  shortcutKey.ts
src/views/: Main.vue  Search.vue  TransparentDrag.vue
src/views/ClipboardToast/: ClipboardToast.vue
src/views/Main/: Main.vue
src/views/Main/components/: LaunchList.vue  Sidebar.vue
src/views/OperationCategory/: OperationCategory.vue
src/views/OperationLaunch/: OperationLaunch.vue
src/views/Search/: Search.vue
src/views/Search/components/: Translation.vue
src/views/Setting/: Setting.vue
src/views/Setting/components/: CommandAlias.vue  Data.vue  General.vue  Network.vue  Portal.vue  QuickSearch.vue  Translation.vue  WebSearch.vue
