[package]
name = "quicklauncher"
version = "0.1.0"
description = "一款 Windows 快速启动器"
authors = ["Peng <2567810155@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quicklaunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-pinia = "4"
tauri-plugin-prevent-default = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-icons = "0.2.1"
pinyin = "0.10.0"
lnk_parser = "0.4.2"
log = "0.4"
encoding_rs = "0.8.35"
scraper = "0.24.0"
ua_generator = "0.5.22"
base64 = "0.22.1"

url = "2"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros", "schema-sync", "entity-registry" ] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_System_Com",
] }
